--- a/package.json
+++ b/package.json
@@ -69,8 +69,21 @@
     "workbox-webpack-plugin": "^7.1.0"
   },
   "dependencies": {
-    "@mantine/core": "^7.12.0",
-    "@mantine/hooks": "^7.12.0",
+    "@mantine/core": "^7.12.1",
+    "@mantine/form": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
+    "@mantine/modals": "^7.12.1",
+    "@mantine/tiptap": "^7.12.1",
+    "@tiptap/extension-highlight": "^2.6.1",
+    "@tiptap/extension-link": "^2.6.1",
+    "@tiptap/extension-subscript": "^2.6.1",
+    "@tiptap/extension-superscript": "^2.6.1",
+    "@tiptap/extension-text-align": "^2.6.1",
+    "@tiptap/extension-typography": "^2.6.2",
+    "@tiptap/extension-underline": "^2.6.1",
+    "@tiptap/pm": "^2.6.1",
+    "@tiptap/react": "^2.6.1",
+    "@tiptap/starter-kit": "^2.6.1",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
