--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@mantine/hooks": "^7.12.1",
     "@mantine/modals": "^7.12.1",
     "@mantine/tiptap": "^7.12.1",
+    "@tabler/icons-react": "^3.12.0",
     "@tiptap/extension-highlight": "^2.6.1",
     "@tiptap/extension-link": "^2.6.1",
     "@tiptap/extension-subscript": "^2.6.1",
