--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@mantine/form": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "@mantine/modals": "^7.12.1",
+    "@mantine/notifications": "^7.12.1",
     "@mantine/tiptap": "^7.12.1",
     "@tabler/icons-react": "^3.12.0",
     "@tiptap/extension-highlight": "^2.6.1",
@@ -86,6 +87,8 @@
     "@tiptap/react": "^2.6.1",
     "@tiptap/starter-kit": "^2.6.1",
     "axios": "^1.7.2",
+    "dexie": "^4.0.8",
+    "dexie-react-hooks": "^1.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
